--- a/Groupproject.ipynb
+++ b/Groupproject.ipynb
@@ -4,6 +4,95 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Client created. Use the name of the repo <span style=\"font-weight: bold\">(</span>Python_Group_Project<span style=\"font-weight: bold\">)</span> as the name of the bucket\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Client created. Use the name of the repo \u001b[1m(\u001b[0mPython_Group_Project\u001b[1m)\u001b[0m as the name of the bucket\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "from dagshub import get_repo_bucket_client\n",
+    "# Get a boto3.client object\n",
+    "s3 = get_repo_bucket_client(\"lollaadityasrivatsav/Python_Group_Project\")\n",
+    "\n",
+    "# Upload file\n",
+    "s3.upload_file(\n",
+    "    Bucket=\"Python_Group_Project\",  # name of the repo\n",
+    "    Filename=\"/Users/adityasrivatsav/Documents/EAS503/Group Project/Behavioral_Risk_Factor_Data__Tobacco_Use__2011_to_present_.csv\",  # local path of file to upload\n",
+    "    Key=\"remote.csv\",  # remote path where to upload the file\n",
+    ")\n",
+    "# Download file\n",
+    "s3.download_file(\n",
+    "    Bucket=\"Python_Group_Project\",  # name of the repo\n",
+    "    Key=\"remote.csv\",  #  remote path from where to download the file\n",
+    "    Filename=\"local.csv\",  # local path where to download the file\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ['MLFLOW_TRACKING_URI'] = \"https://dagshub.com/lollaadityasrivatsav/Python_Group_Project.mlflow\"\n",
+    "os.environ['MLFLOW_TRACKING_USERNAME'] = \"lollaadityasrivatsav\"\n",
+    "os.environ['MLFLOW_TRACKING_PASSWORD'] = \"a0ace37f8424c75fef70c155746bd98e3b588872\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sqlite3\n",
+    "import csv\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from ydata_profiling import ProfileReport\n",
+    "import seaborn as sns\n",
+    "import tk\n",
+    "import PyQt5\n",
+    "import matplotlib\n",
+    "matplotlib.use('TkAgg')  # or 'Qt5Agg', 'WebAgg'\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler, PolynomialFeatures\n",
+    "encoder = OneHotEncoder(handle_unknown = \"ignore\")\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "import joblib\n",
+    "import mlflow\n",
+    "import dagshub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
@@ -16,7 +105,8 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import csv\n",
-    "\n",
+    "import mlflow\n",
+    "import dagshub\n",
     "def create_connection(db_file):\n",
     "    try:\n",
     "        conn = sqlite3.connect(db_file)\n",
@@ -146,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,13 +434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab9452964b6a44f7813ca948bd28e81b",
+       "model_id": "4b2cb176e005477f82188484b4256d48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -386,7 +476,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d54b9257ceed47fe821be3f4631ba57c",
+       "model_id": "440b91efb437456ba1355d4b1710f012",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,7 +490,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e699d6aecff4256ab6e1730f7c6c940",
+       "model_id": "acc1b1318ccc485c92cb87cb0589742c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +504,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c109f84b41c46c986f8b963ac7589fd",
+       "model_id": "0a67d805342b4c58908d996add8e29e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -435,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -472,16 +562,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/r5/_bzgrbtj6tg33lk21qcyg0l80000gn/T/ipykernel_50697/2648839054.py:2: MatplotlibDeprecationWarning: Auto-close()ing of figures upon backend switching is deprecated since 3.8 and will be removed two minor releases later.  To suppress this warning, explicitly call plt.close('all') first.\n",
+      "/var/folders/r5/_bzgrbtj6tg33lk21qcyg0l80000gn/T/ipykernel_62036/2648839054.py:2: MatplotlibDeprecationWarning: Auto-close()ing of figures upon backend switching is deprecated since 3.8 and will be removed two minor releases later.  To suppress this warning, explicitly call plt.close('all') first.\n",
       "  matplotlib.use('WebAgg')\n",
-      "/var/folders/r5/_bzgrbtj6tg33lk21qcyg0l80000gn/T/ipykernel_50697/2648839054.py:20: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/r5/_bzgrbtj6tg33lk21qcyg0l80000gn/T/ipykernel_62036/2648839054.py:20: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -546,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -589,6 +679,14 @@
       "MAE: 10.000000000000004\n",
       "MSE: 100.00000000000007\n",
       "RMSE: 10.000000000000004\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -659,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +800,7 @@
        " 1.958016943853707)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -810,6 +908,207 @@
     "# Calculate metrics\n",
     "mse = mean_squared_error(y_test, predictions)\n",
     "print(f'Mean Squared Error: {mse}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Initialized MLflow to track repo <span style=\"color: #008000; text-decoration-color: #008000\">\"lollaadityasrivatsav/Python_Group_Project\"</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Initialized MLflow to track repo \u001b[32m\"lollaadityasrivatsav/Python_Group_Project\"\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Repository lollaadityasrivatsav/Python_Group_Project initialized!\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Repository lollaadityasrivatsav/Python_Group_Project initialized!\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import dagshub\n",
+    "import mlflow\n",
+    "\n",
+    "dagshub.init(\"Python_Group_Project\", \"lollaadityasrivatsav\", mlflow=True)\n",
+    "mlflow.start_run()\n",
+    "\n",
+    "\n",
+    "mlflow.log_param(\"parameter name \", \"value\")\n",
+    "mlflow.log_metric(\"metric name\", 1)\n",
+    "\n",
+    "mlflow.end_run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/05/17 08:13:49 INFO mlflow.tracking.fluent: Autologging successfully enabled for statsmodels.\n",
+      "2024/05/17 08:13:49 WARNING mlflow.tracking.fluent: Exception raised while enabling autologging for sklearn: 'NoneType' object has no attribute 'split'\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlflow.autolog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'SimpleImputer' from 'sklearn.preprocessing' (/opt/anaconda3/lib/python3.11/site-packages/sklearn/preprocessing/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LabelEncoder, SimpleImputer\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mensemble\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RandomForestRegressor\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mean_absolute_error, mean_squared_error\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SimpleImputer' from 'sklearn.preprocessing' (/opt/anaconda3/lib/python3.11/site-packages/sklearn/preprocessing/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder, SimpleImputer\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load and prepare your data\n",
+    "data = pd.read_csv('Behavioral_Risk_Factor_Data__Tobacco_Use__2011_to_present_.csv')\n",
+    "\n",
+    "# Identify non-numeric columns and convert\n",
+    "non_numeric_columns = data.select_dtypes(include=['object']).columns\n",
+    "data = pd.get_dummies(data, columns=non_numeric_columns, drop_first=True)\n",
+    "\n",
+    "X = data.drop('Data_Value', axis=1)\n",
+    "y = data['Data_Value']\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create an imputer object that fills missing values with the median of the column\n",
+    "imputer = SimpleImputer(strategy='median')\n",
+    "\n",
+    "# Create a RandomForestRegressor\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "\n",
+    "# Make a pipeline that first fills missing values then fits the model\n",
+    "pipeline = Pipeline([\n",
+    "    ('imputer', imputer),\n",
+    "    ('regressor', model)\n",
+    "])\n",
+    "\n",
+    "# Fit the model using the pipeline\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "y_pred = pipeline.predict(X_test)\n",
+    "\n",
+    "# Metrics\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "print(f'MAE: {mae}, MSE: {mse}, RMSE: {rmse}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mlflow\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "def log_model_performance(model, model_name, X_train, X_test, y_train, y_test):\n",
+    "    with mlflow.start_run(run_name=f\"{model_name} Baseline\"):\n",
+    "        model.fit(X_train, y_train)\n",
+    "        predictions = model.predict(X_test)\n",
+    "        mae = mean_absolute_error(y_test, predictions)\n",
+    "        mse = mean_squared_error(y_test, predictions)\n",
+    "        rmse = mse ** 0.5\n",
+    "\n",
+    "        mlflow.log_metrics({\"MAE\": mae, \"MSE\": mse, \"RMSE\": rmse})\n",
+    "top_models = [\n",
+    "    RandomForestRegressor(random_state=42),\n",
+    "    GradientBoostingRegressor(random_state=42),\n",
+    "    SVR()\n",
+    "]\n",
+    "\n",
+    "for model in top_models:\n",
+    "    model_name = model.__class__.__name__\n",
+    "    log_model_performance(model, model_name, X_train, X_test, y_train, y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "def perform_tuning(model, param_grid, model_name):\n",
+    "    grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    \n",
+    "    best_model = grid_search.best_estimator_\n",
+    "    predictions = best_model.predict(X_test)\n",
+    "    mse = mean_squared_error(y_test, predictions)\n",
+    "    \n",
+    "    with mlflow.start_run(run_name=f\"{model_name} Tuned\"):\n",
+    "        mlflow.log_param(\"best_params\", grid_search.best_params_)\n",
+    "        mlflow.log_metric(\"MSE\", mse)\n",
+    "        log_model(best_model, \"model\")\n",
+    "    \n",
+    "    return best_model\n",
+    "\n",
+    "# Example parameter grid - specify per model\n",
+    "param_grid = {'n_estimators': [100, 200], 'max_depth': [10, 20, None]}\n",
+    "tuned_model = perform_tuning(RandomForestRegressor(), param_grid, \"RandomForestRegressor\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "\n",
+    "pca = PCA(n_components=2)\n",
+    "X_train_pca = pca.fit_transform(X_train)\n",
+    "X_test_pca = pca.transform(X_test)\n",
+    "\n",
+    "log_model_performance(tuned_model, f\"{model_name} with PCA\", X_train_pca, X_test_pca, y_train, y_test)\n"
    ]
   }
  ],
